# trabalho-final-comp_trabalho_final_

./: README.md  pyproject.toml
exemplos/: algoritmos.lox  arrays.lox  classes.lox  controle.lox  fibonacci.lox  funcoes.lox  hello_world.lox  loops.lox  operacoes.lox
lox/: __init__.py  __main__.py  ast_nodes.py  builtins.py  environment.py  interpreter.py  lexer.py  lox_error.py  main.py  parser.py  token_types.py
tests/: run_tests.py  test_interpreter.py  test_lexer.py
