[project]
name = "lox-interpreter"
version = "0.1.0"
description = "Um interpretador Lox estendido implementado em Python"
authors = [
    {name = "Samuel", email = "seu.email@exemplo.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lox = "lox.main:main"
